--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  http: ^0.12.1 # Http Call Request
   device_preview: ^0.4.4 # Check Device
   after_layout: ^1.0.7+2 # After First Page
   flutter_dotenv: ^2.1.0 # Include Secret Info
@@ -40,6 +41,7 @@ dependencies:
   google_sign_in: ^4.5.1 # OAuth Google SignIn
   firebase_storage: ^3.1.6 # firebase storage
   image_picker: ^0.6.7+2 # Image Select
+  circular_reveal_animation: ^1.1.5 # Bottom Nav Animation
   
 
 dev_dependencies:
@@ -59,6 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/start_image.jpg
     - assets/images/auth_image.png
     - assets/images/google-logo.jpg
