--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,11 +67,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-    - assets/images/start_image.jpg
     - assets/images/auth_image.png
     - assets/images/google-logo.jpg
     - assets/images/forgotpassword_image.png
-    - assets/images/default_detail_image.png
+    - assets/images/movie_memory_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -85,9 +84,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Questrial
+    - family: Quicksand-Bold
       fonts:
-        - asset: assets/fonts/Questrial-Regular.ttf
+        - asset: assets/fonts/Quicksand-Bold.ttf
+    - family: Quicksand-Regular
+      fonts:
+        - asset: assets/fonts/Quicksand-Regular.ttf
+    - family: Quicksand-Medium
+      fonts:
+        - asset: assets/fonts/Quicksand-Medium.ttf
 
   #
   # For details regarding fonts from package dependencies,
