--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -14,6 +14,7 @@
 	<array>
 		<string>en</string>
 		<string>ko</string>
+		<string>zh_CN</string>
 	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
