--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="moviememory"
+        android:label="Movie Memory"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
