--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,9 +49,11 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            // debug mode
+            // signingConfig signingConfigs.debug
+
+            // release mode
+            signingConfig signingConfigs.release
         }
     }
 }
