--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,10 +50,10 @@ android {
     buildTypes {
         release {
             // debug mode
-            // signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
 
             // release mode
-            signingConfig signingConfigs.release
+            // signingConfig signingConfigs.release
         }
     }
 }
