--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -44,11 +44,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>UseCameraLibrary</string>
+	<string>Allow to access your camera to save movie photo</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>UseMicLibrary</string>
+	<string>Allow to access your microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>UsePhotoLibrary</string>
+	<string>Allow to access your photo library to save movie photo</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
